Colab を使用して作成されました

--- a/colabs/quick_start.ipynb
+++ b/colabs/quick_start.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
         "id": "W28j15ApoK_D",
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {
         "id": "KuLPy_awXaP_",
         "language": "python"
@@ -110,35 +110,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "toBpbthy93gr",
-        "language": "python",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 435
-        },
-        "outputId": "a00dee5e-2f3e-4160-d797-ee98e3ffcb2e"
+        "language": "python"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "Cannot find or access API key in Colab secrets with secret='ALPHA_GENOME_API_KEY'. Make sure you have added the API key to Colab secrets and enabled access. See https://www.alphagenomedocs.com/installation.html#add-api-key-to-secrets for more details.",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mSecretNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/alphagenome/colab_utils.py\u001b[0m in \u001b[0;36mget_api_key\u001b[0;34m(secret)\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m       \u001b[0mapi_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0muserdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msecret\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mapi_key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/google/colab/userdata.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(key)\u001b[0m\n\u001b[1;32m     67\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mresp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'exists'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mSecretNotFoundError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mresp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'access'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mSecretNotFoundError\u001b[0m: Secret ALPHA_GENOME_API_KEY does not exist.",
-            "\nThe above exception was the direct cause of the following exception:\n",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-879551208.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdna_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdna_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolab_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_api_key\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/alphagenome/colab_utils.py\u001b[0m in \u001b[0;36mget_api_key\u001b[0;34m(secret)\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0muserdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTimeoutException\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m     ) as e:\n\u001b[0;32m---> 51\u001b[0;31m       raise ValueError(\n\u001b[0m\u001b[1;32m     52\u001b[0m           \u001b[0;34mf'Cannot find or access API key in Colab secrets with {secret=}. Make'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m           \u001b[0;34m' sure you have added the API key to Colab secrets and enabled'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Cannot find or access API key in Colab secrets with secret='ALPHA_GENOME_API_KEY'. Make sure you have added the API key to Colab secrets and enabled access. See https://www.alphagenomedocs.com/installation.html#add-api-key-to-secrets for more details."
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "dna_model = dna_client.create(colab_utils.get_api_key())"
       ]
@@ -154,17 +131,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "U2Q-amDjkYVt",
-        "outputId": "7143a665-5e53-414f-e6c4-40c0f504c7fd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "30556f2f-c916-4a07-fc50-85d1319aa023"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "['ATAC',\n",
@@ -180,8 +153,9 @@
               " 'PROCAP']"
             ]
           },
+          "execution_count": 45,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -3289,6 +3263,15 @@
         "\n",
         "That's it for the quick start guide. To dive in further, check out our [other tutorials](https://www.alphagenomedocs.com/tutorials/index.html).\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_18J3WFdXqL2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
